[tool.poetry]
name = "hw09"
version = "0.1.0"
description = ""
authors = ["AnybodyKnows <evgeniiolavrik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
pymongo = "^4.7.2"
mongoengine = "^0.28.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
